--- a/pag/gh.html
+++ b/pag/gh.html
@@ -14,7 +14,7 @@
         body{
             height: 370vw;
             
-            background-color: aqua;
+            background-color: rgb(0, 0, 0);
             background-image: url(../imagens/tela-github.jpg);
             background-repeat: no-repeat;
             background-size: cover;
