--- a/pag/inta.html
+++ b/pag/inta.html
@@ -14,7 +14,7 @@
         body{
             height: 850vw;
             
-            background-color: aqua;
+            background-color: rgb(0, 0, 0);
             background-image: url(../imagens/tela-instagram.jpg);
             background-repeat: no-repeat;
             background-size: cover;
