--- a/pag/tt.html
+++ b/pag/tt.html
@@ -14,7 +14,7 @@
         body{
             height: 1050vw;
             
-            background-color: aqua;
+            background-color: rgb(0, 0, 0);
             background-image: url(../imagens/tela-twitter.jpg);
             background-repeat: no-repeat;
             background-size: cover;
