--- a/pag/yt.html
+++ b/pag/yt.html
@@ -14,7 +14,7 @@
         body{
             height: 500vw;
             
-            background-color: aqua;
+            background-color: rgb(0, 0, 0);
             background-image: url(../imagens/tela-youtube.png);
             background-repeat: no-repeat;
             background-size: cover;
